# transcounter

./: README.md  install.bat  install.sh  pyproject.toml  run_converter.bat  run_converter.sh  run_counter.bat  run_counter.sh  run_extrapolator.bat  run_extrapolator.sh
transcounter/: __init__.py  converter.py  counter.py  extrapolator.py  selector.py  utilities.py
