[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcounter"
version = "0.0.3"
authors = [
    {name = "Ing. Dmitrii Grishchuk"},
]
description = "A package for traffic counting and exporting to SUMO"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "shapely>=2.0.0",
    "numpy>=2.0.0",
    "pygame>=2.0.0",
    "pygame-widgets>=1.0.0",
    "pandas>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transcounter"]

[tool.setuptools.package-data]
"mypkg" = ["images/**/*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
transcounter = "transcounter.selector:gui"
counter = "transcounter.counter:main"
extrapolator = "transcounter.extrapolator:main"
converter = "transcounter.converter:main"
